[gd_scene load_steps=2 format=3 uid="uid://b12fhok278rrf"]

[ext_resource type="Script" uid="uid://hyabn326tesl" path="res://scripts/components/hurtbox_component.gd" id="1_trd8p"]

[node name="HurtboxComponent" type="Area3D"]
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
monitorable = false
script = ExtResource("1_trd8p")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
